# RtspAndroid

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/pan/project/fastrtsplive/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/pan/project/fastrtsplive/: Extensions.kt  Live555RtspCameraXFragment.kt  MainActivity.kt  RtspCameraXFragment.kt
app/src/main/res/layout/: activity_main.xml  fragment_camera_preview.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/pan/project/fastrtsplive/: ExampleUnitTest.kt
camera_record/: build.gradle.kts
camera_record/src/androidTest/java/pan/lib/camera_record/: ExampleInstrumentedTest.kt
camera_record/src/main/: AndroidManifest.xml
camera_record/src/main/cpp/: CMakeLists.txt  camera_record.cpp
camera_record/src/main/java/pan/lib/camera_record/: NativeLib.kt
camera_record/src/main/java/pan/lib/camera_record/media/: BitmapUtils.java  Encoder.kt  HardEncodeUtils.kt  ImageUtil.java  ImageUtils.java  Yuv.java  YuvUtil.java  YuvUtil.kt
camera_record/src/main/java/pan/lib/camera_record/test/: FileUtil.kt  VideoFileWriter.kt
camera_record/src/main/java/pan/lib/camera_record/ui/: CameraPreviewActivity.kt  CameraPreviewFragment.kt  CameraXPreviewFragment.kt
camera_record/src/main/res/layout/: fragment_camera_preview.xml
camera_record/src/test/java/pan/lib/camera_record/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rtspserver/: build.gradle.kts
stream_pusher/: build.gradle.kts
stream_pusher/src/androidTest/java/pan/project/stream_pusher/: ExampleInstrumentedTest.kt
stream_pusher/src/main/: AndroidManifest.xml
stream_pusher/src/main/cpp/: CMakeLists.txt  stream_pusher.cpp
stream_pusher/src/main/cpp/Base/include/: AndroidLog.h  FileUtil.h
stream_pusher/src/main/cpp/Base/src/: AndroidLog.cpp  FileUtil.cpp
stream_pusher/src/main/cpp/live555/include/liveMedia/: DeviceSource.hh
stream_pusher/src/main/cpp/live555/src/: ByteBuffer.cpp  CameraSource.cpp  MediaData.cpp  RTSPStream.cpp  WW_H264VideoServerMediaSubsession.cpp  WW_H264VideoSource.cpp  announceURL.cpp  live555MediaServer.cpp  testH264VideoStreamer.cpp
stream_pusher/src/main/cpp/live555/src/include/: ByteBuffer.h  CameraSource.h  MediaData.h  RTSPStream.h  WW_H264VideoServerMediaSubsession.h  WW_H264VideoSource.h  announceURL.hh  live555MediaServer.h  testH264VideoStreamer.h
stream_pusher/src/main/cpp/live555/src/testProgs/: testH264VideoStreamerByFile.cpp
stream_pusher/src/main/java/pan/project/stream_pusher/: NativeLib.kt  NetUtil.kt  StreamPushLib.kt
stream_pusher/src/test/java/pan/project/stream_pusher/: ExampleUnitTest.kt
streampusher/: build.gradle.kts
streampusher/src/androidTest/java/pan/lib/streampusher/: ExampleInstrumentedTest.kt
streampusher/src/main/cpp/: CMakeLists.txt  streampusher.cpp
streampusher/src/main/java/pan/lib/streampusher/: NativeLib.kt
streampusher/src/test/java/pan/lib/streampusher/: ExampleUnitTest.kt
